[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dtlabs"
version = "0.1.0"
description = "General Purpose Package to handle with common things that we have to do in our day-to-day life."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.37.8",
    "oci>=2.147.0",
    "pika>=1.3.2",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "pylint>=3.2.7",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
]
